changed some links

--- a/index.html
+++ b/index.html
@@ -1,38 +1,141 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+  <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Homepage</title>
-    <script src="https://code.jquery.com/jquery-3.1.0.min.js"></script>
+    <title>Login</title>
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
 </head>
+<style>
+    @import url(https://fonts.googleapis.com/css?family=Roboto:300);
+
+.login-page {
+  width: 360px;
+  padding: 8% 0 0;
+  margin: auto;
+}
+.form {
+  position: relative;
+  z-index: 1;
+  background: #FFFFFF;
+  max-width: 360px;
+  margin: 0 auto 100px;
+  padding: 45px;
+  text-align: center;
+  box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.2), 0 5px 5px 0 rgba(0, 0, 0, 0.24);
+}
+.form input {
+  font-family: "Roboto", sans-serif;
+  outline: 0;
+  background: #f2f2f2;
+  width: 100%;
+  border: 0;
+  margin: 0 0 15px;
+  padding: 15px;
+  box-sizing: border-box;
+  font-size: 14px;
+}
+.form button {
+  font-family: "Roboto", sans-serif;
+  text-transform: uppercase;
+  outline: 0;
+  background: #4CAF50;
+  width: 100%;
+  border: 0;
+  padding: 15px;
+  color: #FFFFFF;
+  font-size: 14px;
+  -webkit-transition: all 0.3 ease;
+  transition: all 0.3 ease;
+  cursor: pointer;
+}
+.form button:hover,.form button:active,.form button:focus {
+  background: #43A047;
+}
+.form .message {
+  margin: 15px 0 0;
+  color: #b3b3b3;
+  font-size: 12px;
+}
+.form .message a {
+  color: #4CAF50;
+  text-decoration: none;
+}
+.form .register-form {
+  display: none;
+}
+.container {
+  position: relative;
+  z-index: 1;
+  max-width: 300px;
+  margin: 0 auto;
+}
+.container:before, .container:after {
+  content: "";
+  display: block;
+  clear: both;
+}
+.container .info {
+  margin: 50px auto;
+  text-align: center;
+}
+.container .info h1 {
+  margin: 0 0 15px;
+  padding: 0;
+  font-size: 36px;
+  font-weight: 300;
+  color: #1a1a1a;
+}
+.container .info span {
+  color: #4d4d4d;
+  font-size: 12px;
+}
+.container .info span a {
+  color: #000000;
+  text-decoration: none;
+}
+.container .info span .fa {
+  color: #EF3B3A;
+}
+.error{
+  color: red;
+}
+body {
+  background: #76b852; /* fallback for old browsers */
+  background: rgb(141,194,111);
+  background: linear-gradient(90deg, rgba(141,194,111,1) 0%, rgba(118,184,82,1) 50%);
+  font-family: "Roboto", sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;      
+}
+</style>
 <body>
-    <div class="header">
-        <a href="./views/login.html">Logout</a>
-    </div>
-    <div>
-    <section>
-        <div class="text">
-            <textarea placeholder="Post title" class="post_title"></textarea>
-            <textarea placeholder="Post Description" class="post_description"></textarea>
-            <input type="submit" value="post" class="new_post"/>
+  <div class="login-page">
+      <!-- <div class="flash">
+        All Inputs are needed
+      </div> -->
+        <div class="form">
+          <form class="login-form">
+            <input type="text" class="email" placeholder="email" name="email"/>
+            <input type="password" class="password" placeholder="password" name="password"/>
+            <button class="login">login</button>
+            <p class="message">Not registered? <a href="./views/register.html">Create an account</a></p>
+          </form>
         </div>
-    </section>
-    </div>
-    <div class="all-posts">
-    </div>
+      </div>
 </body>
 </html>
 <script>
-    const new_post = document.querySelector(".new_post")
-    const post_title = document.querySelector(".post_title")
-    const post_description = document.querySelector(".post_description");
-    new_post.onclick = async (event) =>{
-        const apiUrl = "https://micro-servisec.herokuapp.com/create-post"
-        const data = { post: post_title.value, description: post_description.value}
-        axios({
+  const apiUrl = "https://micro-servisec.herokuapp.com/sign-in"
+  const user_email = document.querySelector(".email");
+  const user_password = document.querySelector(".password");
+  const login = document.querySelector(".login");
+
+  login.onclick = async (event) =>{
+    event.preventDefault()
+    const data = { email: user_email.value.toLowerCase(), password: user_password.value}
+    await axios({
         method: "POST",
         url: `${apiUrl}`,
         data: data,
@@ -40,92 +143,20 @@
             "Content-Type": "application/json", 
             "Access-Control-Allow-Origin" : "*",
             "Access-Control-Allow-Methods":"GET,PUT,POST,",
-            "x-access-token": localStorage.getItem('x-access-token')
-    },
-    }).then(res=> {
-        location.reload();
-        console.log(res)
-    })
-    .catch(res => console.log(res))   
-    }
-
-    let all_posts = document.querySelector(".all-posts")
-    const apiUrl = "https://micro-servisec.herokuapp.com/posts"
-    axios({
-        method: "GET",
-        url: `${apiUrl}`,
-        headers: { 
-            "Content-Type": "application/json", 
-            "Access-Control-Allow-Origin" : "*",
-            "Access-Control-Allow-Methods":"GET,PUT,POST,",
-            "x-access-token": localStorage.getItem('x-access-token')
     },
     }).then((res)=>{
         if(res.status == 200){
-          res.data.data.map((single_data) => {
-            let post = document.createElement('div')
-            let post_id = document.createElement('a')
-            let post_title = document.createElement('p')
-            let post_description = document.createElement('p')
-            let delete_post = document.createElement("button")
-            let comment = document.createElement("button")
-            let line = document.createElement("hr")
-
-            post_id.textContent = single_data._id
-            post_title.textContent = single_data.post
-            post_description.textContent = single_data.description
-            post.setAttribute('class', "post")
-            delete_post.setAttribute('post_id', single_data._id);
-            delete_post.setAttribute('class', "delete_post");
-            delete_post.textContent = "Delete"
-            comment.textContent = "Comment"
-            comment.setAttribute('post_id', single_data._id);
-            comment.setAttribute('class', "comment")
-
-            // post.appendChild(post_id)
-            post.appendChild(post_title)
-            post.appendChild(post_description)
-            post.appendChild(delete_post)
-            post.appendChild(comment)
-            post.appendChild(line)
-
-            all_posts.appendChild(post)
-          })
+          console.log(res)
+            localStorage.setItem( 'x-access-token', res.data.token)
+            window.location.href = "./views/home.html" ; 
         }
     }).catch((res) =>{
-    //handle error
-    // const error = document.createElement('div').innerHTML = "An account with this email exists"
-    // page.appendChild(error)    
-    console.log(res);
+      let error = document.querySelector(".error")
+      console.log(res)
+      if(res.response.status == 400){
+        let body = document.querySelector(".form")
+        // body.style.color = "red";
+      }
   });
-
-  window.onload = () => {
-        document.addEventListener('click', event =>{
-            if (event.target.className == 'delete_post') {
-                let post_id = event.target.getAttribute("post_id")
-                let data = { post_id }
-                axios({
-                    method: "POST",
-                    url: `https://micro-servisec.herokuapp.com/delete-post`,
-                    data: data,
-                    headers: { 
-                        "Content-Type": "application/json", 
-                        "Access-Control-Allow-Origin" : "*",
-                        "Access-Control-Allow-Methods":"GET,PUT,POST,",
-                        "x-access-token": localStorage.getItem('x-access-token')
-                        },
-            }).then(res =>{
-                location.reload();
-                console.log("post deleted")
-            }).catch(res =>{
-                console.log(res)
-            })
-            }
-            if (event.target.className == 'comment') {
-                localStorage.setItem( 'post_id', event.target.getAttribute("post_id"))
-                window.location.href = "./views/comment.html"
-            }
-        })
-    }
-    
+  }
 </script>
